fix: no more nth-child spacing

--- a/src/components/admin/Teams/index.module.scss
+++ b/src/components/admin/Teams/index.module.scss
@@ -39,9 +39,7 @@
 
 .buttonMargin {
 	margin-right: 1em;
-	&:nth-child(n+3) {
-		margin-bottom: 1em;
-	}
+	margin-bottom: 1em;
 }
 
 .toolbar {
